--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -4,91 +4,170 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My Face Detector App"
+    "# Face Detection in images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This simple prograram detects faces in an image using Python, OpenCV, numpy and matplotlib**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://lh3.googleusercontent.com/d/1j_jeJtovta3MqbztojgIkXDRI9iDzkpI\" alt=\"Face detection\" style=\"width: 700px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import libraries**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the OpenCV Package, numpy and requests for downloading the image\n",
     "import cv2 as cv\n",
     "import numpy as np\n",
     "import requests\n",
-    "\n",
-    "# URL of the hosted image\n",
-    "url = \"https://lh3.googleusercontent.com/d/1SazmxZvko0PO8DiDQtodRHHoMl50UJyv\" \n",
-    "\n",
-    "# Download the image\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**URL of the hosted image**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://lh3.googleusercontent.com/d/1SazmxZvko0PO8DiDQtodRHHoMl50UJyv\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Download the image**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "response = requests.get(url)\n",
-    "img_array = np.array(bytearray(response.content), dtype=np.uint8)\n",
-    "\n",
-    "# Convert image to OpenCV format\n",
+    "img_array = np.array(bytearray(response.content), dtype=np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Convert image to OpenCV format**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "img = cv.imdecode(img_array, -1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 150,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1600, 1067)"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Convert image to grayscale\n",
-    "gray_image = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
-    "gray_image.shape"
+    "**Convert image to grayscale**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the Classifier\n",
+    "gray_image = cv.cvtColor(img, cv.COLOR_BGR2GRAY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Load the Classifier**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "face_classifier = cv.CascadeClassifier(\n",
     "    cv.data.haarcascades + \"haarcascade_frontalface_default.xml\"\n",
     ")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Perform face detection**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Perform face detection\n",
     "face = face_classifier.detectMultiScale(\n",
     "    gray_image, scaleFactor=1.1, minNeighbors=7, minSize=(40, 40)\n",
     ")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Drawing a bounding box**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drawing a bounding box\n",
     "for (x, y, w, h) in face:\n",
     "    cv.circle(img, (x + w // 2, y + h // 2), (w // 2), (0, 255, 255), 2)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Displaying the image**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +176,7 @@
        "(-0.5, 1066.5, 1599.5, -0.5)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -113,11 +192,7 @@
     }
    ],
    "source": [
-    "# Displaying the image\n",
     "img_rgb = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
-    "\n",
-    "# Import the Matplotlib library to display the image\n",
-    "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(img_rgb)\n",
     "plt.axis('off')\n",
