--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Drawing a bounding box**"
+    "**Drawing a bounding circle**"
    ]
   },
   {
