--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -11,21 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**This simple prograram detects faces in an image using Python, OpenCV, numpy and matplotlib**"
+    "### This simple prograram detects faces in an image using Python, OpenCV, numpy and matplotlib"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://lh3.googleusercontent.com/d/1j_jeJtovta3MqbztojgIkXDRI9iDzkpI\" alt=\"Face detection\" style=\"width: 700px;\"/>"
+    "<img src=\"sample.png\" alt=\"Face detection\" style=\"width: 700px;\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Import libraries**"
+    "### Import libraries"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**URL of the hosted image**"
+    "### URL of the hosted image"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Download the image**"
+    "### Download the image"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Convert image to OpenCV format**"
+    "### Convert image to OpenCV format"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Convert image to grayscale**"
+    "### Convert image to grayscale"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Load the Classifier**"
+    "### Load the Classifier"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Perform face detection**"
+    "### Perform face detection"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Drawing a bounding circle**"
+    "### Drawing a bounding circle"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Displaying the image**"
+    "### Displaying the image"
    ]
   },
   {
