--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This simple prograram detects faces in an image using Python, OpenCV, numpy and matplotlib"
+    "### This simple program detects faces in images using Python, OpenCV, numpy and matplotlib"
    ]
   },
   {
