--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"sample.png\" alt=\"Face detection\" style=\"width: 700px;\"/>"
+    "<div>\n",
+    "<img src=\"sample.png\" alt=\"Face detection\" style=\"width: 700px;\"/>\n",
+    "</div>"
    ]
   },
   {
