--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -18,9 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
-    "<img src=\"sample.png\" alt=\"Face detection\" style=\"width: 700px;\"/>\n",
-    "</div>"
+    "<!-- <img src=\"attachment: sample.png\" alt=\"Face detection\" style=\"width: 700px:;\"/> -->\n",
+    "![alternatvie text](sample.png)"
    ]
   },
   {
