--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -11,16 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This simple program detects faces in images using Python, OpenCV, numpy and matplotlib"
+    "### This simple program detects faces in images using Python, OpenCV, numpy and matplotlib. Steps are as follows."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "<!-- <img src=\"attachment: sample.png\" alt=\"Face detection\" style=\"width: 700px:;\"/> -->\n",
-    "![alternatvie text](sample.png)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
