--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# response = requests.get(url)\n",
-    "# img_array = np.array(bytearray(response.content), dtype=np.uint8)"
+    "# img_array = np.array(bytearray(response.content), dtype=np.uint8)."
    ]
   },
   {
