--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drawing a bounding circle"
+    "### Draw a bounding circle"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Displaying the image"
+    "### Display the image"
    ]
   },
   {
