--- a/Face Detector.ipynb
+++ b/Face Detector.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This simple program detects faces in images using Python,\n",
-    "### OpenCV, numpy and matplotlib. Steps are as follows."
+    "### This simple program detects faces in images using Python, OpenCV, numpy and matplotlib. Steps are as follows."
    ]
   },
   {
